# acceleration_examples

./: README.md
accelerated_doublevadd_publisher/: CMakeLists.txt  package.xml
accelerated_doublevadd_publisher/include/: vadd.hpp
accelerated_doublevadd_publisher/src/: accelerated_doublevadd_publisher.cpp
accelerated_vadd/: CMakeLists.txt  package.xml
accelerated_vadd/src/: host.cpp  kv260.cfg  vadd.cpp
accelerated_vadd_publisher/: CMakeLists.txt  package.xml
accelerated_vadd_publisher/src/: accelerated_vadd_publisher.cpp  vadd.cpp
accelerated_vadd_publisher_once/: CMakeLists.txt  package.xml
accelerated_vadd_publisher_once/include/: vadd.hpp
accelerated_vadd_publisher_once/src/: accelerated_vadd_publisher.cpp  accelerated_vadd_publisher_once.cpp  vadd.cpp
doublevadd_publisher/: CMakeLists.txt  package.xml
doublevadd_publisher/include/: doublevadd_component.hpp  doublevadd_component_fpga.hpp  doublevadd_component_typeadapter.hpp
doublevadd_publisher/launch/: profile.launch.py  vadd_analyse.launch.py  vadd_power_tracing.launch.py
doublevadd_publisher/scripts/: trace_analysis_vaddtiming.py
doublevadd_publisher/src/: doublevadd_component.cpp  doublevadd_component_fpga.cpp  doublevadd_component_typeadapter.cpp  doublevadd_node.cpp  doublevadd_node_adaptive.cpp  doublevadd_publisher.cpp  doublevadd_publisher_adaptive.cpp  doublevadd_publisher_adaptive_with_components.cpp  doublevadd_publisher_adaptive_with_components_and_state.cpp
doublevadd_publisher_instrumented/: CMakeLists.txt  package.xml
doublevadd_publisher_instrumented/src/: doublevadd_publisher.cpp  doublevadd_publisher_instrumented.cpp  doublevadd_publisher_instrumented_tracef.cpp  testbench.cpp
faster_doublevadd_publisher/: CMakeLists.txt  package.xml
faster_doublevadd_publisher/launch/: vadd_analyse.launch.py  vadd_analyse_slx.launch.py
faster_doublevadd_publisher/src/: faster_doublevadd.cpp  faster_doublevadd_publisher.cpp
faster_triplevadd_publisher/: CMakeLists.txt  package.xml
faster_triplevadd_publisher/src/: faster_triplevadd.cpp  faster_triplevadd_publisher.cpp  vadd.cpp
faster_vadd_publisher/: CMakeLists.txt  package.xml
faster_vadd_publisher/src/: faster_vadd.cpp  faster_vadd_publisher.cpp  testbench.cpp  vadd.cpp
graphs/perception_2nodes/: setup.cfg
image_proc_adaptive/: package.xml
nodes/accelerated_doublevadd_publisher/: CMakeLists.txt  package.xml
nodes/accelerated_doublevadd_publisher/include/: ZTS11VectorAddID_register_map.hpp  avalonmm_driver.hpp
nodes/accelerated_doublevadd_publisher/src/: accelerated_doublevadd_publisher.cpp  accelerated_doublevadd_publisher_agilex.cpp  avalonmm_driver.cpp  doublevadd_oneapi.cpp  kernel_driver.cpp  kv260.cfg  sed_sadd_user_subsystem.tcl  sed_vadd_user_subsystem.tcl  testbench.cpp  vadd.cpp  vadd_oneapi.cpp
nodes/accelerated_vadd/: CMakeLists.txt  package.xml
nodes/accelerated_vadd/src/: host.cpp  host_new.cpp  kv260.cfg  vadd.cpp
nodes/accelerated_vadd_publisher/: CMakeLists.txt  package.xml
nodes/accelerated_vadd_publisher/launch/: accelerated_vadd_analyse.launch.py  accelerated_vadd_capture.launch.py  accelerated_vadd_capture_agilex.launch.py  accelerated_vadd_power_tracing.launch.py
nodes/accelerated_vadd_publisher/src/: accelerated_vadd_publisher_agilex.cpp  vadd_oneapi.cpp
nodes/accelerated_vadd_publisher_once/: package.xml
nodes/doublevadd_publisher/: CMakeLists.txt  package.xml
nodes/doublevadd_publisher/include/: doublevadd_component_adaptive.hpp  doublevadd_component_adaptive_stateful.hpp  doublevadd_component_fpga.hpp
nodes/doublevadd_publisher/launch/: vadd_analyse.launch.py  vadd_capture.launch.py
nodes/doublevadd_publisher/src/: doublevadd_component.cpp  doublevadd_component_adaptive.cpp  doublevadd_component_adaptive_stateful.cpp  doublevadd_component_fpga.cpp  doublevadd_node.cpp  doublevadd_node_adaptive.cpp  vadd.cpp
nodes/faster_doublevadd_publisher/: CMakeLists.txt  package.xml
nodes/faster_doublevadd_publisher/launch/: vadd_capture.launch.py
nodes/faster_doublevadd_publisher/src/: faster_doublevadd_publisher.cpp  kv260.cfg  vadd.cpp  vadd_faster.dtbo.new  vadd_faster.dtsi  vadd_slx.cpp
nodes/image_pipeline_examples/: CMakeLists.txt  package.xml
nodes/image_pipeline_examples/launch/: rectify_resize.launch.py  trace_rectify.launch.py  trace_rectify_resize_gpu.launch.py
nodes/image_pipeline_examples/src/: rectify_node.cpp  rectify_resize_fpga_integrated_node.cpp  rectify_resize_fpga_integrated_streamlined_node.cpp  rectify_resize_fpga_node.cpp  rectify_resize_fpga_streamlined_node.cpp  rectify_resize_fpga_streamlined_node_xrt.cpp  rectify_resize_gpu_node.cpp  rectify_resize_node.cpp
nodes/image_proc_adaptive/: CMakeLists.txt  package.xml
nodes/image_proc_adaptive/include/: image_proc_adaptive.hpp
nodes/image_proc_adaptive/launch/: image_proc_adaptive.launch.py
nodes/image_proc_adaptive/src/: image_proc_adaptive.cpp  kv260.cfg
nodes/multiple_doublevadd_publisher/: CMakeLists.txt  package.xml
nodes/multiple_doublevadd_publisher/launch/: all.launch.py
nodes/multiple_doublevadd_publisher/src/: accelerated_doublevadd_publisher.cpp  faster_doublevadd_publisher.cpp  kv260.cfg  kv260_multiple.cfg  offloaded_doublevadd_publisher.cpp  vadd_faster.cpp
nodes/offloaded_doublevadd_publisher/: CMakeLists.txt  package.xml
nodes/offloaded_doublevadd_publisher/include/: vadd.hpp
nodes/offloaded_doublevadd_publisher/src/: offloaded_doublevadd_publisher.cpp
nodes/publisher_xilinx/: CMakeLists.txt  member_function_publisher.cpp  package.xml
nodes/publisher_xilinx/launch/: trace.launch.py
nodes/simple_adder/: CMakeLists.txt  package.xml
nodes/simple_adder/include/: adder.hpp
nodes/simple_adder/src/: adder1.cpp  testbench1.cpp
offloaded_doublevadd_publisher/: CMakeLists.txt  package.xml
publisher_xilinx/: CHANGELOG.rst  CMakeLists.txt  member_function_publisher.cpp  package.xml
simple_adder/: CMakeLists.txt  package.xml
triplevadd_publisher/: CMakeLists.txt  package.xml
vadd_publisher/: CMakeLists.txt  package.xml
vadd_publisher/src/: vadd_publisher.cpp
(+103 files in other folders)
