<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>accelerated_vadd_publisher_once</name>
  <version>0.2.0</version>
  <description>A trivial vector-add ROS 2 publisher that adds two
    inputs to a vector and publishes only once. Vector add operations
    are offloaded into to the FPGA.

    This example is meant only for FPGA-evaluation purposes. See
    "accelerated_vadd_publisher" for a publisher that continuously publishes.

    The offloading operation into the FPGA (or to the Programmable Logic (PL))
    allows the publisher to meet its targeted rate (10 Hz). See "vadd_publisher"
    for a version running purely on the CPUs which fails to maintain the publication
    rate.
  </description>
  <maintainer email="victorma@xilinx.com">Víctor Mayoral Vilches</maintainer>
  <license>Apache License 2.0</license>
  <author email="victorma@xilinx.com">Víctor Mayoral Vilches</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_vitis</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vitis_common</build_depend>
  <!-- <build_depend>acceleration_firmware_xilinx</build_depend> -->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>acceleration_firmware_xilinx</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
