<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>accelerated_vadd</name>
  <version>0.2.0</version>
  <description>A trivial vector-add example (NO ROS USED) that serves
    as a baseline for development and debugging. The computation
    sends two integer vectors and adds them.

    Vector add operations are offloaded into to the FPGA. The offloading
    operation into the FPGA (or to the Programmable Logic (PL)).
  </description>
  <maintainer email="victorma@xilinx.com">Víctor Mayoral Vilches</maintainer>
  <license>Apache License 2.0</license>
  <author email="victorma@xilinx.com">Víctor Mayoral Vilches</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_vitis</buildtool_depend>  

  <build_depend>acceleration_firmware_kv260</build_depend>
  <build_depend>vitis_common</build_depend>
  
  <exec_depend>acceleration_firmware_kv260</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
